s4-application/http-echo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-echo
  namespace: gorilla
spec:
  ingressClassName: nginx
  rules:
    - host: argocd-workshop-s4a.192.168.4.154.sslip.io
      http:
        paths:
          - backend:
              service:
                name: s4a-application-http-echo-svc
                port:
                  number: 80
            path: /
            pathType: Prefix
